<resources>
    <string name="app_name">Mobile Banking</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_payment">Payment</string>
    <string name="title_pending">Pending</string>
    <string name="title_currencies">Currencies</string>
    <string name="title_sample">Sample</string>
    <string name="title_config">Config</string>
    <string name="title_currency_list">Currencies</string>
    <string name="title_currency_detail">Currency Detail</string>
    <string name="title_account_detail">Account Detail</string>
    <string name="buttonNo">No</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonOk">Ok</string>
    <string name="title_activity_config">Configurations</string>
    <string name="title_activity_beneficiary">Beneficiary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>

</resources>
